<resources>
    <string name="app_name">Бирюзовое кольцо</string>
    <string name="app_tagline">Карта, история и материалы по 24 районам Орловской области</string>
    <string name="nav_map">Карта</string>
    <string name="nav_timeline">Лента</string>
    <string name="nav_library">Медиатека</string>
    <string name="map_title">Интерактивная карта Орловской области</string>
    <string name="timeline_title">Временная лента истории</string>
    <string name="library_title">Медиатека районов</string>
    <string name="district_title">Район</string>
    <string name="district_history">История</string>
    <string name="district_facts">Факты</string>
    <string name="district_photos">Фотографии</string>
    <string name="district_mark_complete">Отметить как пройденный</string>
    <string name="district_mark_done">Пройдено</string>
    <string name="district_open_timeline">Открыть ленту</string>
    <string name="district_open_library">Открыть медиатеку</string>
    <string name="map_completed_format">Пройдено: %1$d из %2$d</string>
    <string name="map_progress_format">%1$d%% маршрута</string>
    <string name="map_selected_hint">Нажимайте на точки карты, чтобы открыть краткую информацию и карточку района.</string>
    <string name="timeline_selected">Выбранный период</string>
    <string name="library_materials">Материалы</string>
</resources>
